# fin-track

./: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  asd  go.mod  go.sum  package.json  schema.sql  test.logs
auth-service/: .dockerignore  .gitignore  Dockerfile  Makefile  go.mod  go.sum  handlers.go  jwt.go  main.go  store.go
auth-service/sql/: provision.sql  schema.sql
auth-service/templates/: login.html
backend/: .air.toml  .dockerignore  .gitignore  Dockerfile  Makefile
backend/sql/: add_approved.sql  add_category.sql  add_currency.sql  add_flywheel.sql  add_verified_merchant.sql  drop.sql  nuke.sql  schema.sql
categorizer-mcp/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
categorizer-mcp/src/categorizer_mcp/: __init__.py  __main__.py  agent.py  config.py  db.py  http.py  ocr.py  ollama.py  queue.py  server.py
cmd/fin-track/: main.go
docs/: logging.md  recognition-roadmap.md
frontend/: Dockerfile  Makefile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/traefik/: dynamic.yml
internal/config/: config.go
internal/handler/: handler.go  receipt.go
internal/httpx/: httpx.go  user.go
internal/model/: ollama.go  receipt.go  shopping.go
internal/repository/: db.go  merchant.go  receipt.go
internal/router/: middleware.go  router.go  router_test.go
sql/: drop.sql  schema.sql
traefik/: Makefile  dotenv.example  dynamic.yml  traefik.yml
(+91 files in other folders)
