[project]
name = "categorizer-mcp"
version = "0.1.0"
description = "MCP microservice that categorizes fin-track receipt products with Ollama."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "rapidfuzz>=3",
    # Pulled in transitively by mcp, but pinned explicitly since we serve our own
    # Starlette app and run uvicorn directly.
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.scripts]
categorizer-mcp = "categorizer_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/categorizer_mcp"]
